SF-Custom-Objects/salesforce_ant_46.0/sample/retrieveUnpackaged/objects/Application_Point_of_Contact__c.object
<CustomObject>
    <description>Junction Object for Applications and Contacts</description>
    <fields>
        <fullName>Applications__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applications</label>
        <referenceTo>Applications__c</referenceTo>
        <relationshipLabel>Application Point of Contacts</relationshipLabel>
        <relationshipName>Application_Point_of_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Point_Of_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Point Of Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Application Point of Contacts</relationshipLabel>
        <relationshipName>Application_Point_of_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Roles__c</fullName>
        <label>Roles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ADO</fullName>
                </value>
                <value>
                    <fullName>COR/GTL</fullName>
                </value>
                <value>
                    <fullName>CRMS</fullName>
                </value>
                <value>
                    <fullName>CRMT</fullName>
                </value>
                <value>
                    <fullName>Read Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Application Point of Contact</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>APOC -{00000}</displayFormat>
        <label>Application Point of Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Point of Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>